Fix the image name in the swarm test

--- a/swarm.stack.yml
+++ b/swarm.stack.yml
@@ -7,7 +7,7 @@ services:
             mode: global
         build:
             context: .
-        image: test-proxy:1.0
+        image: pitilezard/nginx-proxy-swarm:1.18.0
         networks:
             - proxy
         ports:
