--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
-version: '2'
+version: "2"
 services:
-  nginx-proxy:
-    image: jwilder/nginx-proxy
-    container_name: nginx-proxy
-    ports:
-      - "80:80"
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
+    nginx-proxy:
+        image: pitilezard/nginx-proxy-swarm:1.19.1
+        container_name: nginx-proxy
+        build:
+            context: .
+        ports:
+            - "80:80"
+        volumes:
+            - /var/run/docker.sock:/tmp/docker.sock:ro
 
-  whoami:
-    image: jwilder/whoami
-    environment:
-      - VIRTUAL_HOST=whoami.local
+    whoami:
+        image: jwilder/whoami
+        environment:
+            - VIRTUAL_HOST=whoami.local
