--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
     proxy:
-        image: pitilezard/nginx-proxy-swarm:1.19.6.1
+        image: pitilezard/nginx-proxy-swarm:1.19.6.labels
         container_name: proxy
         build:
             context: .
