Forcing the sha256 also forces the platform which breaks the multi platform build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         build:
             context: .
             args:
-                - NGINX_VERSION=1.21.1@sha256:3f13b4376446cf92b0cb9a5c46ba75d57c41f627c4edb8b635fa47386ea29e20
+                - NGINX_VERSION=1.21.1
         ports:
             - "80:80"
         volumes:
