--- a/swarm.stack.yml
+++ b/swarm.stack.yml
@@ -6,7 +6,7 @@ services:
             mode: global
         build:
             context: .
-        image: pitilezard/nginx-proxy-swarm:1.19.6.1
+        image: pitilezard/nginx-proxy-swarm
         networks:
             - proxy
         ports:
