--- a/docker-compose-separate-containers.yml
+++ b/docker-compose-separate-containers.yml
@@ -1,23 +1,26 @@
-version: '2'
+version: "2"
 services:
-  nginx:
-    image: nginx
-    container_name: nginx
-    ports:
-      - "80:80"
-    volumes:
-      - /etc/nginx/conf.d
+    nginx:
+        platform: linux/amd64
+        image: nginx
+        container_name: nginx
+        ports:
+            - "80:80"
+        volumes:
+            - /etc/nginx/conf.d
 
-  dockergen:
-    image: jwilder/docker-gen
-    command: -notify-sighup nginx -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
-    volumes_from:
-      - nginx
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl
+    dockergen:
+        platform: linux/amd64
+        image: jwilder/docker-gen
+        command: -notify-sighup nginx -watch /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+        volumes_from:
+            - nginx
+        volumes:
+            - /var/run/docker.sock:/tmp/docker.sock:ro
+            - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl
 
-  whoami:
-    image: jwilder/whoami
-    environment:
-      - VIRTUAL_HOST=whoami.local
+    whoami:
+        platform: linux/amd64
+        image: jwilder/whoami
+        environment:
+            - VIRTUAL_HOST=whoami.local
