bug fix with python3 and nginx 1.27.1

--- a/app/Procfile
+++ b/app/Procfile
@@ -1,3 +1,3 @@
 cron: cron -f
-dockergen: docker-gen -watch -notify "python3 /app/mergeswarm.py" /app/nginx.tmpl /etc/nginx/node.conf.d/${NODE_HOSTNAME:-`hostname`}.conf
+dockergen: docker-gen -watch -notify "/root/.venvs/crossplane/bin/python3 /app/mergeswarm.py" /app/nginx.tmpl /etc/nginx/node.conf.d/${NODE_HOSTNAME:-`hostname`}.conf
 nginx: nginx
